--- a/AppTerceiro/AppTerceiro/Views/Home/Juridico.cshtml
+++ b/AppTerceiro/AppTerceiro/Views/Home/Juridico.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Juridico";
 }
 
+<link rel="stylesheet" href="~/css/estilo.css" />
+
 <h1>Juridico</h1>
 <h2>@Model.Id</h2>
 <h2>@Model.Nome</h2>
