--- a/AppTerceiro/AppTerceiro/Views/Home/Privacy.cshtml
+++ b/AppTerceiro/AppTerceiro/Views/Home/Privacy.cshtml
@@ -14,6 +14,8 @@
     }
     
 }
+
+<link rel="stylesheet" href="~/css/estilo.css" />
 <h1>@ViewData["Title"]</h1>
 
 <main aria-labelledby="title">
