--- a/AppTerceiro/AppTerceiro/Views/Shared/_Layout.cshtml
+++ b/AppTerceiro/AppTerceiro/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Juridico">Juridico</a>
+                        </li
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Pessoa">Empresa</a>
                         </li>
                     </ul>
                 </div>
